kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: enable-cors
spec:
  headers:
    accessControlAllowOriginList:
      - "https://tiktok-brigade.danesjenovdan.si"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tiktok-brigade
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - tiktok-brigade.danesjenovdan.si
      secretName: tiktok-brigade-tls
  rules:
    - host: tiktok-brigade.danesjenovdan.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tiktok-brigade
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tiktok-brigade-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: tiktok-brigade-enable-cors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.tiktok-brigade.danesjenovdan.si
      secretName: tiktok-brigade-nginx-tls
  rules:
    - host: files.tiktok-brigade.danesjenovdan.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tiktok-brigade-nginx
                port:
                  number: 80
